# song_translator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
song_translator/: manage.py
song_translator/song_translator/: asgi.py  settings.py  urls.py  wsgi.py
song_translator/track/: admin.py  apps.py  backends.py  factories.py  feature_flag.py  models.py  serializers.py  service.py  signals.py  urls.py  utils.py  views.py
song_translator/track/migrations/: 0001_initial.py  0002_alter_track_translate_text.py  0002_audittable_record_id.py  0002_auto_20210510_0724.py  0002_auto_20210513_0926.py  0002_auto_20210617_0827.py  0003_auto_20210617_0855.py  0003_comment.py  0003_track_owner.py  0004_rename_translate_translation.py  0005_delete_comment.py  0006_alter_translation_text.py  0007_auto_20210514_0808.py
